@startuml

title __SOUNDRECORDER.APP's Class Diagram__\n

  namespace com.danielkim.soundrecorder {
    class com.danielkim.soundrecorder.BuildConfig {
    }
  }
  

  namespace com.danielkim.soundrecorder {
    class com.danielkim.soundrecorder.CustomAlertDialogForExtractedText {
    }
  }
  

  namespace com.danielkim.soundrecorder {
    class com.danielkim.soundrecorder.DBHelper {
    }
  }
  

  namespace com.danielkim.soundrecorder {
    class com.danielkim.soundrecorder.RecordingItem {
    }
  }
  

  namespace com.danielkim.soundrecorder {
    class com.danielkim.soundrecorder.RecordingService {
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace activities {
      class com.danielkim.soundrecorder.activities.MainActivity {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace activities {
      class com.danielkim.soundrecorder.activities.SettingsActivity {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace adapters {
      class com.danielkim.soundrecorder.adapters.FileViewerAdapter {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace fragments {
      class com.danielkim.soundrecorder.fragments.FileViewerFragment {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace fragments {
      class com.danielkim.soundrecorder.fragments.LicensesFragment {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace fragments {
      class com.danielkim.soundrecorder.fragments.PlaybackFragment {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace fragments {
      class com.danielkim.soundrecorder.fragments.RecordFragment {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace fragments {
      class com.danielkim.soundrecorder.fragments.SettingsFragment {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace listeners {
      interface com.danielkim.soundrecorder.listeners.OnDatabaseChangedListener {
      }
    }
  }
  

  namespace com.danielkim.soundrecorder {
    namespace mockclasses {
      class com.danielkim.soundrecorder.mockclasses.MockRecordingService {
      }
    }
  }
  

  com.danielkim.soundrecorder.CustomAlertDialogForExtractedText .up.|> android.view.View.OnClickListener
  com.danielkim.soundrecorder.CustomAlertDialogForExtractedText -up-|> android.app.Dialog
  com.danielkim.soundrecorder.DBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.danielkim.soundrecorder.RecordingItem .up.|> android.os.Parcelable
  com.danielkim.soundrecorder.RecordingService -up-|> android.app.Service
  com.danielkim.soundrecorder.RecordingService o-- com.danielkim.soundrecorder.DBHelper : mDatabase
  com.danielkim.soundrecorder.activities.MainActivity -up-|> android.support.v7.app.ActionBarActivity
  com.danielkim.soundrecorder.activities.SettingsActivity -up-|> android.support.v7.app.ActionBarActivity
  com.danielkim.soundrecorder.adapters.FileViewerAdapter .up.|> com.danielkim.soundrecorder.listeners.OnDatabaseChangedListener
  com.danielkim.soundrecorder.adapters.FileViewerAdapter -up-|> android.support.v7.widget.RecyclerView.Adapter
  com.danielkim.soundrecorder.adapters.FileViewerAdapter o-- com.danielkim.soundrecorder.RecordingItem : item
  com.danielkim.soundrecorder.adapters.FileViewerAdapter o-- com.danielkim.soundrecorder.DBHelper : mDatabase
  com.danielkim.soundrecorder.fragments.FileViewerFragment -up-|> android.support.v4.app.Fragment
  com.danielkim.soundrecorder.fragments.FileViewerFragment o-- com.danielkim.soundrecorder.adapters.FileViewerAdapter : mFileViewerAdapter
  com.danielkim.soundrecorder.fragments.LicensesFragment -up-|> android.support.v4.app.DialogFragment
  com.danielkim.soundrecorder.fragments.PlaybackFragment -up-|> android.support.v4.app.DialogFragment
  com.danielkim.soundrecorder.fragments.PlaybackFragment o-- com.danielkim.soundrecorder.RecordingItem : item
  com.danielkim.soundrecorder.fragments.RecordFragment -up-|> android.support.v4.app.Fragment
  com.danielkim.soundrecorder.fragments.SettingsFragment -up-|> android.preference.PreferenceFragment
  com.danielkim.soundrecorder.mockclasses.MockRecordingService -up-|> android.app.Service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
